--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina de Inicio</title>
-  <link rel="stylesheet" href="/styles/inicio.css">
+  <link rel="stylesheet" href="inicio.css">
 </head>
 
 <body>
 <div class="contenedor">
-   <a href="./inicio.html" class="btn"><img src="/assets/hogar.png" alt=""></a>
- <a href="./Pagina.html" class="btn"><img src="/assets/auriculares-de-usuario.png" alt=""></a>
+   <a href="./inicio.html" class="btn"><img src="hogar.png" alt=""></a>
+ <a href="./Pagina.html" class="btn"><img src="auriculares-de-usuario.png" alt=""></a>
   </div>
   <header>
     <div class="header">
@@ -22,7 +22,7 @@
   </header>
 
   <div class="logoINMB">
-    <img src="/assets/LOGO.png" alt="">
+    <img src="LOGO.png" alt="">
   </div>
 
 <section>
