--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 <div class="contenedor">
-   <a href="./inicio.html" class="btn"><img src="hogar.png" alt=""></a>
- <a href="./Pagina.html" class="btn"><img src="auriculares-de-usuario.png" alt=""></a>
+   <a href="./inicio.html" class="btn"><img src="/assets/hogar.png" alt=""></a>
+ <a href="./Pagina.html" class="btn"><img src="/assets/auriculares-de-usuario.png" alt=""></a>
   </div>
   <header>
     <div class="header">
@@ -22,7 +22,7 @@
   </header>
 
   <div class="logoINMB">
-    <img src="LOGO.png" alt="">
+    <img src="/assets/LOGO.png" alt="">
   </div>
 
 <section>
